--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -19,6 +19,8 @@ jobs:
           node-version: '22'
       - run: npm install
       - run: npm run build
+      - name: Verify dist directory
+        run: if [ ! -d "dist" ]; then echo "dist directory does not exist"; exit 1; fi
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
