--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && node rename-to-mjs.js",
+    "build": "tsc && vite build && node rename-to-mjs.js",
     "preview": "vite preview",
     "test": "ts-node runTests.ts",
     "test:unit": "vitest",
