--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -24,12 +24,9 @@ jobs:
     - name: Build project
       run: npm run build
 
-    - name: Verify dist directory
-      run: if [ ! -d "dist" ]; then echo "dist directory does not exist"; exit 1; fi
-
     - name: Deploy to Firebase
       env:
         FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
       run: |
         npm install -g firebase-tools
-        firebase deploy --only hosting
+        firebase deploy --only hosting --project carefinder-70ff2
