--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -24,10 +24,14 @@ jobs:
       - name: Build project
         run: npm run build
 
+      - name: Set Firebase CLI
+        run: npm install -g firebase-tools
+
       - name: Authenticate Firebase
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
         run: |
-          npm install -g firebase-tools
-          firebase login:ci --no-localhost
+          firebase login:ci --token "$FIREBASE_TOKEN"
 
       - name: Deploy to Firebase Hosting
         env:
