--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -24,18 +24,12 @@ jobs:
       - name: Build project
         run: npm run build
 
-      - name: Set Firebase CLI
+      - name: Install Firebase CLI
         run: npm install -g firebase-tools
-
-      - name: Authenticate Firebase
-        env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-        run: |
-          firebase login:ci --token="${FIREBASE_TOKEN}"
 
       - name: Deploy to Firebase Hosting
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
         run: |
           firebase use --token "${FIREBASE_TOKEN}" carefinder-70ff2
-          firebase deploy --only hosting
+          firebase deploy --only hosting --token "${FIREBASE_TOKEN}"
