--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build && node rename-to-mjs.js",
     "preview": "vite preview",
-    "test": "ts-node runTests.ts",
+    "test": "vitest",
     "test:unit": "vitest",
     "test:e2e": "start-server-and-test preview http://localhost:4173 'cypress run --e2e'",
     "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' http://localhost:4173 'cypress open --e2e'",
@@ -49,7 +49,6 @@
     "jsdom": "^24.1.0",
     "npm-run-all2": "^6.2.0",
     "start-server-and-test": "^2.0.4",
-    "ts-node": "^10.9.2",
     "typescript": "^5.5.3",
     "vite": "^5.3.1",
     "vite-plugin-vue-devtools": "^7.3.1",
