--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
-VITE_APP_FIREBASE_API_KEY= AIzaSyBQuxob9m84J5nMS0yYHFJxRH6BJrX8mNE
-VITE_APP_FIREBASE_AUTH_DOMAIN= carefinder-70ff2.firebaseapp.com
-VITE_APP_FIREBASE_PROJECT_ID= carefinder-70ff2
-VITE_FIREBASE_MESSAGING_SENDER_ID= 938950238680
-VITE_FIREBASE_APP_ID= 1:938950238680:web:f5c7afe07a0f9354d152ad
+VITE_APP_FIREBASE_API_KEY=AIzaSyBQuxob9m84J5nMS0yYHFJxRH6BJrX8mNE
+VITE_APP_FIREBASE_AUTH_DOMAIN=carefinder-70ff2.firebaseapp.com
+VITE_APP_FIREBASE_PROJECT_ID=carefinder-70ff2
+VITE_APP_FIREBASE_STORAGE_BUCKET=carefinder-70ff2.appspot.com
+VITE_FIREBASE_MESSAGING_SENDER_ID=938950238680
+VITE_FIREBASE_APP_ID=1:938950238680:web:f5c7afe07a0f9354d152ad
+VITE_FIREBASE_MEASUREMENT_ID=G-8R9YPQD4MP
