hospital search implementation

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ VITE_APP_FIREBASE_STORAGE_BUCKET=carefinder-70ff2.appspot.com
 VITE_FIREBASE_MESSAGING_SENDER_ID=938950238680
 VITE_FIREBASE_APP_ID=1:938950238680:web:f5c7afe07a0f9354d152ad
 VITE_FIREBASE_MEASUREMENT_ID=G-8R9YPQD4MP
+VITE_APP_GOOGLE_MAPS_API_KEY=AIzaSyBQuxob9m84J5nMS0yYHFJxRH6BJrX8mNE
