--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-vue": "^9.27.0",
     "firebase": "^10.12.3",
+    "firebase-functions": "^5.0.1",
     "pinia": "^2.1.7",
     "prettier": "^3.3.2",
     "vue-router": "^4.3.3",
