--- a/package.json
+++ b/package.json
@@ -19,14 +19,17 @@
   "dependencies": {
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/vue": "^8.1.0",
+    "@types/express": "^4.17.21",
     "@types/firebase": "^3.2.1",
     "@typescript-eslint/eslint-plugin": "^7.17.0",
     "@typescript-eslint/parser": "^7.17.0",
     "axios": "^1.7.2",
+    "cors": "^2.8.5",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-vue": "^9.27.0",
+    "express": "^4.19.2",
     "firebase": "^10.12.3",
     "firebase-functions": "^5.0.1",
     "pinia": "^2.1.7",
@@ -39,7 +42,7 @@
     "@tsconfig/node20": "^20.1.4",
     "@types/google.maps": "^3.55.11",
     "@types/jsdom": "^21.1.7",
-    "@types/node": "^20.14.5",
+    "@types/node": "^20.14.12",
     "@types/vue": "^2.0.0",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vitejs/plugin-vue-jsx": "^4.0.0",
