--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -10,7 +10,7 @@
   "compilerOptions": {
     "composite": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
-    "module": "CommonJS",
+    "module": "esnext",
     "moduleResolution": "node",
     "esModuleInterop": true,
     "types": ["node"]
