--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express": "^4.19.2",
     "firebase": "^10.12.3",
     "firebase-functions": "^5.0.1",
+    "papaparse": "^5.4.1",
     "pinia": "^2.1.7",
     "prettier": "^3.3.2",
     "vue-router": "^4.3.3",
@@ -44,6 +45,7 @@
     "@tsconfig/node20": "^20.1.4",
     "@types/google.maps": "^3.55.11",
     "@types/jsdom": "^21.1.7",
+    "@types/papaparse": "^5.3.14",
     "@types/vue": "^2.0.0",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vitejs/plugin-vue-jsx": "^4.0.0",
