--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/vue": "^8.1.0",
+    "@toast-ui/editor": "^3.2.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/firebase": "^3.2.1",
@@ -33,7 +34,9 @@
     "eslint-plugin-vue": "^9.27.0",
     "express": "^4.19.2",
     "firebase": "^10.12.3",
+    "firebase-admin": "^12.3.0",
     "firebase-functions": "^5.0.1",
+    "marked": "^13.0.3",
     "papaparse": "^5.4.1",
     "pinia": "^2.1.7",
     "prettier": "^3.3.2",
