--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,6 @@
     "allowJs": true,
     "checkJs": true
   },
-  "include": ["src/**/*.tsx", "src/**/*.vue", "env.d.ts",],
+  "include": ["src/**/*.tsx", "src/**/*.d.ts", "src/**/*.vue", "env.d.ts"],
   "exclude": ["node_modules"]
 }
