--- a/package.json
+++ b/package.json
@@ -22,21 +22,19 @@
     "@toast-ui/editor": "^3.2.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/firebase": "^3.2.1",
     "@types/node": "^22.1.0",
-    "@typescript-eslint/eslint-plugin": "^7.17.0",
-    "@typescript-eslint/parser": "^7.17.0",
     "axios": "^1.7.2",
     "cors": "^2.8.5",
-    "eslint": "^8.57.0",
+    "csv-writer": "^1.6.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-vue": "^9.27.0",
     "express": "^4.19.2",
-    "firebase": "^10.12.3",
-    "firebase-admin": "^12.3.0",
+    "firebase": "^10.12.5",
+    "firebase-admin": "^12.3.1",
     "firebase-functions": "^5.0.1",
+    "googleapis": "^140.0.1",
     "marked": "^13.0.3",
+    "nodemailer": "^6.9.14",
     "papaparse": "^5.4.1",
     "pinia": "^2.1.7",
     "prettier": "^3.3.2",
@@ -48,22 +46,30 @@
     "@tsconfig/node20": "^20.1.4",
     "@types/google.maps": "^3.55.11",
     "@types/jsdom": "^21.1.7",
+    "@types/nodemailer": "^6.4.15",
     "@types/papaparse": "^5.3.14",
+    "@types/uuid": "^10.0.0",
     "@types/vue": "^2.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.1.0",
+    "@typescript-eslint/parser": "^8.1.0",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vitejs/plugin-vue-jsx": "^4.0.0",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^13.0.0",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.5.1",
-    "cypress": "^13.12.0",
+    "cypress": "^13.13.2",
     "dotenv": "^16.4.5",
+    "eslint": "^8.57.0",
+    "eslint-config-google": "^0.14.0",
     "eslint-plugin-cypress": "^3.3.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-vue": "^9.27.0",
     "jsdom": "^24.1.0",
     "npm-run-all2": "^6.2.0",
     "start-server-and-test": "^2.0.4",
     "typescript": "^5.5.3",
-    "vite": "^5.3.1",
+    "vite": "^5.4.0",
     "vite-plugin-vue-devtools": "^7.3.1",
     "vitest": "^1.6.0",
     "vue-tsc": "^2.0.21"
