--- a/functions/package.json
+++ b/functions/package.json
@@ -15,8 +15,11 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "axios": "^1.7.4",
+    "csv-writer": "^1.6.0",
     "firebase-admin": "^12.3.1",
-    "firebase-functions": "^5.0.0"
+    "firebase-functions": "^5.0.0",
+    "nodemailer": "^6.9.14"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.12.0",
