--- a/functions/package.json
+++ b/functions/package.json
@@ -16,6 +16,7 @@
   "main": "lib/index.js",
   "dependencies": {
     "axios": "^1.7.4",
+    "csv-stringify": "^6.5.1",
     "csv-writer": "^1.6.0",
     "firebase-admin": "^12.3.1",
     "firebase-functions": "^5.0.0",
