--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/node": "^22.1.0",
     "axios": "^1.7.2",
     "cors": "^2.8.5",
+    "csv-stringify": "^6.5.1",
     "csv-writer": "^1.6.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
