--- a/functions/package.json
+++ b/functions/package.json
@@ -16,10 +16,12 @@
   "main": "lib/index.js",
   "dependencies": {
     "axios": "^1.7.4",
+    "cors": "^2.8.5",
     "csv-stringify": "^6.5.1",
     "csv-writer": "^1.6.0",
     "firebase-admin": "^12.3.1",
     "firebase-functions": "^5.0.0",
+    "googleapis": "^140.0.1",
     "nodemailer": "^6.9.14"
   },
   "devDependencies": {
