--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "firebase-admin": "^12.3.1",
     "firebase-functions": "^5.0.1",
     "googleapis": "^140.0.1",
+    "idb": "^8.0.2",
     "marked": "^13.0.3",
     "nodemailer": "^6.9.14",
     "papaparse": "^5.4.1",
