--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/vue": "^8.1.0",
-    "@toast-ui/editor": "^3.2.2",
+    "@toast-ui/editor": "^3.1.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^22.1.0",
@@ -30,7 +30,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "express": "^4.19.2",
-    "firebase": "^10.12.5",
+    "firebase": "^11.6.0",
     "firebase-admin": "^12.3.1",
     "firebase-functions": "^5.0.1",
     "googleapis": "^140.0.1",
@@ -40,6 +40,7 @@
     "papaparse": "^5.4.1",
     "pinia": "^2.1.7",
     "prettier": "^3.3.2",
+    "undici": "^7.6.0",
     "vue-router": "^4.3.3",
     "vue3-markdown-it": "^1.0.10"
   },
@@ -71,9 +72,9 @@
     "npm-run-all2": "^6.2.0",
     "start-server-and-test": "^2.0.4",
     "typescript": "^5.5.3",
-    "vite": "^5.4.0",
+    "vite": "^6.2.4",
     "vite-plugin-vue-devtools": "^7.3.1",
-    "vitest": "^1.6.0",
+    "vitest": "^3.1.1",
     "vue-tsc": "^2.0.21"
   }
 }
