--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "start-server-and-test": "^2.0.4",
     "typescript": "^5.5.3",
     "vite": "^6.2.4",
+    "vite-plugin-pwa": "^1.0.0",
     "vite-plugin-vue-devtools": "^7.3.1",
     "vitest": "^3.1.1",
     "vue-tsc": "^2.0.21"
