--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "firebase-functions": "^5.0.1",
     "googleapis": "^140.0.1",
     "idb": "^8.0.2",
+    "json2csv": "^6.0.0-alpha.2",
     "marked": "^13.0.3",
     "nodemailer": "^6.9.14",
     "papaparse": "^5.4.1",
@@ -49,6 +50,7 @@
     "@tsconfig/node20": "^20.1.4",
     "@types/google.maps": "^3.55.11",
     "@types/jsdom": "^21.1.7",
+    "@types/json2csv": "^5.0.7",
     "@types/nodemailer": "^6.4.15",
     "@types/papaparse": "^5.3.14",
     "@types/uuid": "^10.0.0",
